# sfg-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ANALYSIS_PROMPT.md  CLAUDE.md  Cargo.toml  Dockerfile
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
analysis_prompts/: bottom.md  default.md  jungle.md  middle.md  support.md  top.md
analysis_prompts/shared/: rating_rubric.md  response_format.md
analysis_prompts/skills/: cs_per_minute.md  damage_per_minute.md  deaths.md  kills_assists.md  vision_score.md
migrations/: 20260205000000_initial.sql  20260206000000_add_champions_table.sql  20260206000001_add_role_to_match_history.sql  20260206000002_add_notification_queue_table.sql  20260207000000_add_match_stats.sql  20260207000001_add_featured_mode_flag.sql  20260207000002_add_queue_id.sql  20260208000000_add_bot_config_table.sql  20260209000000_deduplicate_summoners.sql  20260210000000_add_notification_retry.sql  20260517000000_add_role_gaps_to_notification_queue.sql  20260713000000_add_analysis_history.sql  20260722000000_add_end_retry_count_to_active_games.sql
src/: config.rs  health.rs  lib.rs  main.rs
src/analysis/: AGENTS.md  CLAUDE.md  discord.rs  gemini.rs  history.rs  llm.rs  mod.rs  models.rs  pipeline.rs  roles.rs
src/db/: CLAUDE.md  mod.rs  models.rs  repository.rs
src/discord/: AGENTS.md  CLAUDE.md  (+4 more)
tests/: config_error_tests.rs  config_tests.rs  live_llm_calibration.rs  messages_tests.rs  models_tests.rs  notification_messages_tests.rs  riot_client_tests.rs  riot_error_tests.rs  tracker_error_tests.rs  tracker_tests.rs
(+10 files in other folders)
